# AGI-to-ASI

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  cli.py  simulator.py
src/compute/: __init__.py  growth_model.py  scaling_laws.py
src/core/: __init__.py  definitions.py  digital_advantages.py  theoretical_limits.py
src/forecasting/: __init__.py  scenarios.py
src/frictions/: __init__.py  models.py
src/pathways/: __init__.py  architecture_evolution.py  base.py  multi_agent.py  paradigm_shifts.py  recursive_improvement.py  scaling.py
src/research_agenda/: __init__.py  open_questions.py
src/universal_ai/: __init__.py  aixi_agent.py  legg_hutter.py  solomonoff_prior.py
src/visualization/: __init__.py  plots.py
tests/: test_compute.py  test_forecasting.py  test_frictions.py  test_multi_agent.py  test_pathways_paradigm.py  test_pathways_scaling.py  test_recursive_improvement.py  test_universal_ai.py
ui/: index.html  server.py
